# serenity

./: .dockerignore  .gitignore  .hintrc  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  contracts.yml  security.yml
backend/: .dockerignore  Dockerfile  conftest.py  fly.toml  manage.py  pyproject.toml  schema.yml
backend/apps/availability/: admin.py  calendar_gateway.py  google_calendar.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/availability/migrations/: 0001_initial.py
backend/apps/availability/tests/: test_gateway.py  test_selectors.py  test_views.py
backend/apps/bookings/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/bookings/migrations/: 0001_initial.py  0002_alter_booking_options_and_more.py  0002_initial.py  0003_booking_source_voucher_code.py  0004_alter_booking_options.py
backend/apps/bookings/tests/: conftest.py  test_models.py  test_selectors.py  test_serializers.py  test_services.py  test_signals.py  test_views.py
backend/apps/cms/: api.py  apps.py  models.py  pages.py  selectors.py  serializers.py  settings.py  signals.py  urls.py  views.py  wagtail_hooks.py
backend/apps/cms/migrations/: 0001_initial.py  0002_homepage_services_hero_benefit_1_en_and_more.py  0002_remove_homepage_about_text_en_and_more.py  0002_remove_homepage_address_en_and_more.py  0002_serenitysettings_address_full_serenitysettings_email.py  0003_add_field_help_text.py  0003_homepage_specialty_5_en_homepage_specialty_5_fr.py  0003_remove_specialty.py  0004_heroslide.py  0004_homepage_faq_a1_en_homepage_faq_a1_fr_and_more.py  0004_specialty.py  0005_alter_heroslide_options_and_more.py  0005_homepage_services_hero_poster_image_and_more.py  0006_remove_homepage_specialty_1_en_and_more.py  0007_homepage_services_hero_video_file.py  0008_giftsettings.py  0009_giftsettings_floating_icon_and_more.py  0010_giftsettings_form_code_label_en_and_more.py  0011_giftsettings_email_closing_en_and_more.py  0012_alter_giftsettings_email_heading_fr_and_more.py
backend/apps/cms/static/cms/dashboard/: dashboard.css  dashboard.js
backend/apps/cms/static/css/: wagtail-custom.css
backend/apps/cms/static/js/: wagtail-custom.js
backend/apps/cms/templates/: custom_welcome.html
backend/apps/cms/tests/: conftest.py  test_models.py  test_pages.py  test_selectors.py  test_serializers.py  test_settings.py  test_urls.py  test_views.py  test_wagtailhooks.py
backend/apps/contact/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/contact/migrations/: 0001_initial.py  0002_alter_contactsubmission_options.py
backend/apps/contact/tests/: conftest.py  test_services.py  test_views.py
backend/apps/core/: api.py  api_errors.py  backends.py  images.py  middleware.py  serializer_mixins.py  urls.py  utils.py  validators.py  views.py
backend/apps/core/tests/: test_backends.py  test_form_security.py  test_images.py  test_middleware.py  test_utils.py  test_views.py
backend/apps/payments/: models.py  serializers.py  services.py  urls.py  views.py  webhooks.py
backend/apps/payments/migrations/: 0001_initial.py  0002_stripewebhookevent_livemode_and_more.py  0003_stripepayment_booking_id_stripepayment_kind.py
backend/apps/payments/tests/: test_booking_flow.py  test_models.py  test_serializers.py  test_services.py  test_urls.py  test_views.py  test_webhooks.py
backend/apps/services/: apps.py  models.py  selectors.py  serializers.py  signals.py
backend/apps/services/migrations/: 0001_initial.py  0002_booking_source_voucher_code.py
backend/apps/testimonials/: models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/testimonials/migrations/: 0001_initial.py  0002_alter_testimonial_options_and_more.py  0002_testimonialreply.py  0003_alter_testimonialreply_parent.py
backend/apps/testimonials/tests/: conftest.py  test_selectors.py  test_services.py  test_views.py
backend/apps/vouchers/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/vouchers/migrations/: 0001_initial.py  0002_alter_giftvoucher_options.py  0002_remove_giftvoucher_booking_confirmation_and_more.py
backend/apps/vouchers/tests/: conftest.py  test_admin.py  test_models.py  test_selectors.py  test_serializers.py  test_services.py  test_signals.py  test_views.py  test_vouchers_services.py
backend/config/: cloudinary_config.py  settings.py  urls.py
backend/config/settings/: __init__.py  base.py  local.py  production.py  test.py
backend/e2e/: conftest.py  test_schema.py  test_schemathesis.py
backend/templates/admin/: serenity_welcome.html  wagtail_admin.html
backend/templates/vouchers/: email_admin.html  email_recipient.html
backend/templates/vouchers/emails/: voucher_recipient_en.html  voucher_recipient_en.txt  voucher_recipient_fr.html  voucher_recipient_fr.txt  voucher_sender_en.html  voucher_sender_fr.html
frontend/: .gitignore  .prettierrc  env.d.ts  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: contact-form.spec.ts  legal-pages.spec.ts  navigation.spec.ts  smoke.spec.ts
frontend/functions/: _middleware.ts
frontend/public/: _headers  _redirects  robots.txt  site.webmanifest  sitemap.xml
frontend/src/: App.tsx  fonts.css  index.css  main.tsx  routeTree.gen.ts  vitest.config.ts
frontend/src/__tests__/: error-boundary.integration.test.tsx  security.integration.test.tsx  unmount-cleanup.integration.test.tsx
frontend/src/api/: booking.ts  bookings.api.ts  calendar.api.ts  client.ts  cms.api.ts  cms.ts  contact.api.ts  endpoints.ts  httpError.ts  payments.api.ts  testimonials.api.ts  vouchers.api.ts
frontend/src/app/: providers.tsx  router.tsx
frontend/src/components/: CookieConsent.tsx  ReviewSheet.tsx  (+4 more)
(+196 files in other folders)
