[project]
name = "massage-booking-backend"
version = "1.0.0"
description = "Premium massage booking platform backend"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0.10",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.6.0",
    "django-filter>=24.5",
    "djangorestframework-simplejwt>=5.5.2",
    "psycopg2-binary>=2.9.10",
    "dj-database-url>=2.3.0",
    "python-decouple>=3.10",
    "python-dateutil>=2.10.0",
    "pytz>=2025.1",
    "gunicorn>=23.0.0",
    "whitenoise>=6.8.2",
    
    # Wagtail CMS
    "wagtail>=6.2",
    "wagtail-localize>=1.10",
    "wagtailmenus>=4.0.1",
    
    # Image handling
    "Pillow>=11.0.0",
    "django-imagekit>=5.0.0",
    
    # Background tasks
    "celery>=5.6.0",
    "redis>=5.2.2",
    "django-celery-beat>=2.8.1",
    
    # Email
    "django-anymail[sendgrid]>=13.3.0",
    
    # Calendar
    "ics>=0.8.1",
    "google-auth>=2.37.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.158.0",
    
    # Stripe (prepared, not active)
    "stripe>=11.4.0",
    
    # API Documentation
    "drf-spectacular>=0.28.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.6",
    "django-debug-toolbar>=4.5.0",
    "django-extensions>=3.2.3",
    "ipython>=8.31.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*/migrations/*",
    "staticfiles",
    "media",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising exceptions without from e
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings/*.py" = ["F405", "F403"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"